@@ -1,10 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2011/03/24 03:04:16 obache Exp $
+# $NetBSD: Makefile,v 1.6 2011/04/04 08:30:30 manu Exp $
 #
 
-PKGREVISION=	5
-
 CONFIGURE_ARGS+=	--disable-python
-CONFIGURE_ARGS+=	--disable-php4
+CONFIGURE_ARGS+=	--disable-php5
 CONFIGURE_ARGS+=	--disable-perl
 
 PKG_DESTDIR_SUPPORT=	destdir
