@@ -1,11 +1,11 @@
-# $NetBSD: Makefile.common,v 1.4 2010/05/31 16:44:28 manu Exp $
+# $NetBSD: Makefile.common,v 1.5 2011/04/04 08:30:30 manu Exp $
 #
 # used by security/lasso/Makefile
 # used by security/py-lasso/Makefile
 
-DISTNAME=	lasso-2.2.91
+DISTNAME=	lasso-2.3.5
 CATEGORIES=	security
-MASTER_SITES=	http://labs.libre-entreprise.org/frs/download.php/765/
+MASTER_SITES=	http://dev.entrouvert.org/lasso/
 
 MAINTAINER=	manu@NetBSD.org
 HOMEPAGE=	http://lasso.entrouvert.org/
